--- a/main/BUILD
+++ b/main/BUILD
@@ -7,7 +7,7 @@ cc_binary(
 
 cc_library(
   name = "testable_code",
-  hdrs = ["constructor_work.h","abstractio.h","abstractnumberconverter.h"],
+  hdrs = ["consoledateinputter.h","abstractio.h","abstractnumberconverter.h"],
   srcs = ["abstractio.cpp","abstractnumberconverter.cpp"],
   deps = ["@com_google_absl//absl/strings","@com_google_googletest//:gtest_main"],
   visibility = ["//visibility:public"],
